test/modules/error/incorrect_placement.f90
module a
    subroutine foo()
    end subroutine
end module a